google charts support

--- a/vibm/nomads/nomads/templates/base.html
+++ b/vibm/nomads/nomads/templates/base.html
@@ -239,7 +239,7 @@
         </div> <!-- End of Row-->
         <div class="row">
           <h1>Chart</h1>
-          <div id="chart_div"></div>
+          <div class="container" id="chart-container"></div>
         </div>
       </div>
     </main>
