--- a/vibm/nomads/nomads/templates/nice_organization_chart.html
+++ b/vibm/nomads/nomads/templates/nice_organization_chart.html
@@ -64,7 +64,7 @@
       import {draw_timeline} from '/gui/js/google_charts.mjs';    
       draw_timeline();
     </script-->
-    <script src="{{ url_for('static', filename='js/google_charts_timeline.js') }}"></script>
-    <script type="text/javascript" src="{{ url_for('static', filename='js/charts_collection.js') }}"></script>
+    <script src="{{ url_for('static', filename='js/organization_associations2.js') }}"></script>
+    <!--script type="text/javascript" src="{{ url_for('static', filename='js/charts_collection.js') }}"></script-->
 </body>
 </html>
