--- a/vibm/nomads/nomads/templates/nice_organization_chart.html
+++ b/vibm/nomads/nomads/templates/nice_organization_chart.html
@@ -21,7 +21,7 @@
   <body class="main">
     <div class="row">
         <!-- **** Where Chart is Hosted **** -->
-        <h1> {{data.chart}} Organization Chart</h1>
+        <h1> {{value.chart}} Organization Chart : {{value.description}}</h1>
         <div class="container" id="chart-container"></div>
         <!-- ~~~~ EndOf Organization Chart ~~~~ -->
     </div>
