--- a/vibm/nomads/nomads/templates/nice_organization_chart.html
+++ b/vibm/nomads/nomads/templates/nice_organization_chart.html
@@ -22,7 +22,7 @@
     <div class="row">
         <!-- **** Where Chart is Hosted **** -->
         <h3> {{value.chart}} Organization Chart : {{value.description}}</h3>
-        <div class="container" id="chart-container"></div>
+        <div class="container" id="chart-div"></div>
         <!-- ~~~~ EndOf Organization Chart ~~~~ -->
     </div>
   
