--- a/vibm/nomads/nomads/templates/nice_organization_chart.html
+++ b/vibm/nomads/nomads/templates/nice_organization_chart.html
@@ -24,6 +24,11 @@
         <h3> {{value.chart}} Organization Chart : {{value.description}}</h3>
         <div class="container" id="chart-div"></div>
         <!-- ~~~~ EndOf Organization Chart ~~~~ -->
+        <div class="btn-group">
+            <!-- Control Buttons for New Leafs -->
+            <button class="button button-blue" id="add">Add</button>
+            <button class="button button-red" id="delete">Delete</button>
+        </div>
     </div>
   
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.js"></script>
