--- a/vibm/nomads/nomads/templates/nice_organization_chart.html
+++ b/vibm/nomads/nomads/templates/nice_organization_chart.html
@@ -36,6 +36,10 @@
                 <div class="input-group-prepend">>
                     <span class="input-group-text" id="nodeName">Name:</span>
                 </div>
+                <input type="text" class="form-control" placeholder="identifier">
+            </div>
+            
+            <div class="input-group mb-3"></div> 
                 <div class="input-group-prepend">
                     <button class="btn btn-outline-secondary dropdown-toggle" type="button" data-toggle="dropdown">Dropdown</button>
                     <div class="dropdown-menu">
