--- a/vibm/nomads/nomads/templates/nice_organization_chart.html
+++ b/vibm/nomads/nomads/templates/nice_organization_chart.html
@@ -38,13 +38,26 @@
                 </div>
                 <input type="text" class="form-control" placeholder="identifier">
             </div>
-            
+
             <div class="input-group mb-3"></div> 
                 <div class="input-group-prepend">
                     <button class="btn btn-outline-secondary dropdown-toggle" type="button" data-toggle="dropdown">Dropdown</button>
                     <div class="dropdown-menu">
                         <a class="dropdown-item" href="#">IP</a>
                         <a class="dropdown-item" href="#">DNS</a>
+                    </div>
+                    <input type="text" class="form-control">
+                </div>
+            </div>
+
+            <div class="input-group mb-3"></div> 
+                <div class="input-group-prepend">
+                    <button class="btn btn-outline-secondary dropdown-toggle" type="button" data-toggle="dropdown">Category</button>
+                    <div class="dropdown-menu">
+                        <a class="dropdown-item" href="#">Server</a>
+                        <a class="dropdown-item" href="#">VM</a>
+                        <a class="dropdown-item" href="#">Container</a>
+                        <a class="dropdown-item" href="#">Service</a>
                     </div>
                     <input type="text" class="form-control">
                 </div>
