--- a/vibm/nomads/nomads/templates/nice_organization_chart.html
+++ b/vibm/nomads/nomads/templates/nice_organization_chart.html
@@ -25,8 +25,8 @@
         <div class="container" id="chart-div"></div>
         <!-- ~~~~ EndOf Organization Chart ~~~~ -->
     </div>
-    <!-- New Row -->
-    <div class="row">
+    <!-- New Row with Buttons -->
+    <!--div class="row"-->
         <div class="btn-group">
             <!-- Control Buttons for New Leafs -->
             <button class="button button-blue" id="add" data-toggle="collapse" data-target="#addNode">Add</button>
@@ -68,7 +68,7 @@
                 <!-- DEFINE PARENT !!!-->
             </div>
         </div>
-    </div>
+    <!--/div-->
   
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.js"></script>
     <!--script>window.jQuery || document.write('<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.js"><\/script>')</script-->
