--- a/vibm/nomads/nomads/templates/nice_organization_chart.html
+++ b/vibm/nomads/nomads/templates/nice_organization_chart.html
@@ -29,8 +29,10 @@
     <div class="container">
         <div class="btn-group">
             <!-- Control Buttons for New Leafs -->
-            <button class="button button-blue" id="add" data-toggle="collapse" data-target="#addNode">Add</button>
-            <button class="button button-red" id="delete">Delete</button>
+            <div class="d-flex justify-content-center">
+                <button class="button button-blue" id="add" data-toggle="collapse" data-target="#addNode">Add</button>
+                <button class="button button-red" id="delete">Delete</button>
+            </div>
 
             <div class="collapse" id="addNode">
                 <div class="input-group mb-3">
