--- a/vibm/nomads/nomads/templates/nice_organization_chart.html
+++ b/vibm/nomads/nomads/templates/nice_organization_chart.html
@@ -42,13 +42,9 @@
 
                 <div class="input-group mb-3"> 
                     <div class="input-group-prepend">
-                        <button class="btn btn-outline-secondary dropdown-toggle" type="button" data-toggle="dropdown">Dropdown</button>
-                        <div class="dropdown-menu">
-                            <a class="dropdown-item" href="#">IP</a>
-                            <a class="dropdown-item" href="#">DNS</a>
-                        </div>
-                        <input type="text" class="form-control">
+                        <span class="input-group-text" id="prepend-parent">Parent: </span>
                     </div>
+                    <input type="text" class="form-control" role="parent-id">
                 </div>
 
 
