--- a/vibm/nomads/nomads/templates/nice_organization_chart.html
+++ b/vibm/nomads/nomads/templates/nice_organization_chart.html
@@ -118,6 +118,16 @@
                     </div>
                     <span class="input-group-text" id="severity-Low">Low (No Retry & Proceed)</span>
                 </div>
+
+                <!-- Script file to Handle-->
+                <label for="script-text">Script Commands to Manage StartUp/ Shutdown of Node</label>
+                <div class="input-group mb-3" id="ingrp-script-file"> 
+                    <div class="input-group-prepend">
+                        <span class="input-group-text">Linux Commands</span>
+                    </div>
+                        
+                    <textarea class="form-control">
+                </div>
             </div>
         </div>
     </div>
