--- a/vibm/nomads/nomads/templates/nice_organization_chart.html
+++ b/vibm/nomads/nomads/templates/nice_organization_chart.html
@@ -123,10 +123,10 @@
                 <label for="script-text">Script Commands to Manage StartUp/ Shutdown of Node</label>
                 <div class="input-group mb-3" id="ingrp-script-file"> 
                     <div class="input-group-prepend">
-                        <span class="input-group-text">Linux Commands</span>
+                        <span class="input-group-text">Linux Commands: </span>
                     </div>
                         
-                    <textarea class="form-control">
+                    <textarea class="form-control" id="script-text"></textarea>
                 </div>
             </div>
         </div>
