--- a/vibm/nomads/nomads/templates/nice_organization_chart.html
+++ b/vibm/nomads/nomads/templates/nice_organization_chart.html
@@ -91,6 +91,9 @@
                     </div>
                 </div>
 
+                <!-- Performance Metrics & Thresholds -->
+                <label for="metrics-thresholds">Define Performance Metrics and Thresholds for Overloaded & Not Used</label>
+                
                 <!-- Severity level ... How Important is in case of Failure -->
                 <label for="severity-level">How to proceed in case of failure</label>
                 <div class="input-group mb-3" id="ingrp-severity-level">
