internal agent first drafts

--- a/vibm/nomads/nomads/templates/nice_organization_chart.html
+++ b/vibm/nomads/nomads/templates/nice_organization_chart.html
@@ -109,6 +109,12 @@
                     </div>
                     <!-- High -->    
                     <input type="text" class="form-control" role="cpu-usage" id="cpu-high" placeholder="100%">
+
+                    <div class="input-group-append">
+                            <span class="input-group-text">Low:</span>
+                    </div>
+                    <!-- Low -->    
+                    <input type="text" class="form-control" role="cpu-usage" id="cpu-low" placeholder="5%">
                 </div>
     
                 <!-- Severity level ... How Important is in case of Failure -->
