--- a/vibm/nomads/nomads/templates/hot_air_AC_temperature_graph.html
+++ b/vibm/nomads/nomads/templates/hot_air_AC_temperature_graph.html
@@ -21,7 +21,10 @@
                var num_iot_records = '{{ num_iot_records }}';
 
                var records_first_0 = iot_data_records[0];
-               console.log( 'First Record is ... ' + records_first_0 ) 
+               console.log( 'First Record is ... ' + records_first_0 );
+
+               var records_first_10 = iot_data_records.slice(0, 10);
+               console.log( 'First Ten Records are ... ' + records_first_10 ); 
 
                var data = google.visualization.arrayToDataTable([
                    ['Time', 'Temperature'], 
