server strips special characters from iot_records like ''

--- a/vibm/nomads/nomads/templates/hot_air_AC_temperature_graph.html
+++ b/vibm/nomads/nomads/templates/hot_air_AC_temperature_graph.html
@@ -22,6 +22,7 @@
                //var records_first_0 = iot_data_records[0];
                records_array = all_records.split(";")
 
+               console.log( 'All Records ... ' + all_records );
                console.log( 'Record #1 ... ' + records_array[0] );
 
                var data = google.visualization.arrayToDataTable([
