--- a/vibm/nomads/nomads/templates/hot_air_AC_temperature_graph.html
+++ b/vibm/nomads/nomads/templates/hot_air_AC_temperature_graph.html
@@ -25,14 +25,22 @@
                console.log( 'All Records ... ' + all_records );
                console.log( 'Record #1 ... ' + records_array[1] );
 
-               var data = google.visualization.arrayToDataTable([
-                   ['Time', 'Temperature'], 
-                   //[{{iot_data}}[0], {{iot_data}}[1]]
-                   ['07:00', 22.8],
-                   ['08:00', 24.3],
-                   ['09:00', 24.0],
-                   ['10:00', 30.0]
-               ]);
+               //var data = google.visualization.arrayToDataTable([
+               var data_table = new google.visualization.DataTable();
+               
+               data_table.addColumn('string', 'Time');
+               data_table.addColumn('number', 'Temperature');
+
+               for (var i = 0; i < records_array.length; i++) {
+                   record_i = records_array[i];
+
+                   if (!record_i) {
+                       next;
+                   }
+
+                   values = record_i.split(',');
+
+                   data_table.addRow( [values[1], float(values[2]) ] )
 
                var options = {
                    title: 'Hot-Air AC Temperature Variation',
