server strips special characters from iot_records like ''

--- a/vibm/nomads/nomads/templates/hot_air_AC_temperature_graph.html
+++ b/vibm/nomads/nomads/templates/hot_air_AC_temperature_graph.html
@@ -40,7 +40,8 @@
 
                    values = record_i.split(',');
 
-                   data_table.addRow( [values[1], float(values[2]) ] )
+                   data_table.addRow( [ values[1], float(values[2]) ] );
+               }
 
                var options = {
                    title: 'Hot-Air AC Temperature Variation',
