server strips special characters from iot_records like ''

--- a/vibm/nomads/nomads/templates/hot_air_AC_temperature_graph.html
+++ b/vibm/nomads/nomads/templates/hot_air_AC_temperature_graph.html
@@ -35,7 +35,7 @@
                    record_i = records_array[i];
 
                    if (!record_i) {
-                       next;
+                       continue;
                    }
 
                    values = record_i.split(',');
