server strips special characters from iot_records like ''

--- a/vibm/nomads/nomads/templates/hot_air_AC_temperature_graph.html
+++ b/vibm/nomads/nomads/templates/hot_air_AC_temperature_graph.html
@@ -53,7 +53,7 @@
                    document.getElementById('curve_chart')
                );
 
-               chart.draw(data, options);
+               chart.draw(data_table, options);
            } 
         </script>
     </head>
