zoomIn the temperature graph

--- a/vibm/nomads/nomads/templates/hot_air_AC_temperature_graph.html
+++ b/vibm/nomads/nomads/templates/hot_air_AC_temperature_graph.html
@@ -46,7 +46,13 @@
                var options = {
                    title: 'Hot-Air AC Temperature Variation',
                    curveType: 'function',
-                   legend: {position: 'bottom'}
+                   legend: {position: 'bottom'},
+                   explorer: {
+                       actions: ['dragToZoom', 'rightClickToReset'],
+                       axis: 'horizontal',
+                       keepInBounds: true,
+                       maxZoomIn: 4.0
+                   }
                };
 
                var chart = new google.visualization.LineChart(
@@ -63,7 +69,7 @@
         <![endif]-->
         
         <p>
-            Number of Hot-Air AC Temperature Records Found: {{ num_iot_records }}
+            Number of Hot-Air AC Temperature Records Found: {{ all_records.length }}
         </p>
 
         <div id="curve_chart" style="width: 900px; height: 500px"></div>
