time values NOT string ... use Date

--- a/vibm/nomads/nomads/templates/hot_air_AC_temperature_graph.html
+++ b/vibm/nomads/nomads/templates/hot_air_AC_temperature_graph.html
@@ -50,6 +50,9 @@
                    my_date = my_date_str.split("-");
                    my_time = my_time_str.split(":");
 
+                   var my_year = my_date[0];
+                   console.log( "Full Date Time: Year=" + my_year );
+
                    data_table.addRow( 
                        [ new Date(my_date[0], my_date[1], my_date[2], my_time[0], my_time[1], my_time[2]), Number(values[2]) ] );
                }
