time values BAD Practise to use string type ... use Date

--- a/vibm/nomads/nomads/templates/hot_air_AC_temperature_graph.html
+++ b/vibm/nomads/nomads/templates/hot_air_AC_temperature_graph.html
@@ -56,6 +56,8 @@
                        console.log( "Full Date Time is ..." + full_datetime);
                        console.log( "Date String is ..." + my_date_str);
                        console.log( "Full Date Time: Year=" + my_year);
+
+                       continue;
                    }
 
                    data_table.addRow( 
