--- a/vibm/nomads/nomads/templates/hot_air_AC_temperature_graph.html
+++ b/vibm/nomads/nomads/templates/hot_air_AC_temperature_graph.html
@@ -42,21 +42,23 @@
 
                    full_datetime = values[1];
                    
-                   datetime = full_datetime.split("T");
+                   my_datetime = full_datetime.split("T");
 
-                   my_date_str = datetime[0];
-                   my_time_str = datetime[1];
+                   my_date_str = my_datetime[0];
+                   my_time_str = my_datetime[1];
 
                    my_date = my_date_str.split("-");
                    my_time = my_time_str.split(":");
 
                    var my_year = my_date[0];
                    
+                   console.log( "Full Date Time is ..." + full_datetime);
+                   console.log( "Date String is ..." + my_date_str);
+                   console.log( "Time String is ..." + my_time_str);
+                   
+                   console.log( "Full Date Time: Year=" + my_year);
+                       
                    if (my_year < 2019) {
-                       console.log( "Full Date Time is ..." + full_datetime);
-                       console.log( "Date String is ..." + my_date_str);
-                       console.log( "Full Date Time: Year=" + my_year);
-
                        continue;
                    }
 
