time values BAD Practise to use string type ... use Date

--- a/vibm/nomads/nomads/templates/hot_air_AC_temperature_graph.html
+++ b/vibm/nomads/nomads/templates/hot_air_AC_temperature_graph.html
@@ -60,6 +60,10 @@
                    
                    console.log( "Full Date Time is ..." + full_datetime);
                    console.log( "Date String is ..." + my_date_str);
+                   console.log( "Year is ..." + my_year );
+                   console.log( "Month is ..." + my_month );
+                   console.log( "Day is ..." + my_day );
+
                    console.log( "Time String is ..." + my_time_str);
 
                    console.log( "Full Date Time: Year=" + my_year + ", Month=" + my_month + ", Day=" + my_day + 
