added to server.py/ check_iot_data_avilability() ... the select_all_ac_power_consumption records

--- a/vibm/nomads/nomads/templates/hot_air_AC_temperature_graph.html
+++ b/vibm/nomads/nomads/templates/hot_air_AC_temperature_graph.html
@@ -30,6 +30,7 @@
                
                data_table.addColumn('datetime', 'Time');
                data_table.addColumn('number', 'Temperature');
+               data_table.addColumn('number', 'Power-Consumption');
 
                for (var i = 0; i < records_array.length; i++) {
                    record_i = records_array[i];
